--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <title>CSS-Tricks</title>
     <link href="static/css/main.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@700&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 </head>
@@ -63,7 +64,7 @@
             <section class="popular-articles">
 
                 <header class="popular-header-card">
-                    <h2>Popular this month</h2>
+                    <h2 class="header-card-title">Popular this month</h2>
                 </header>
             </section>
 
